added docsets mocha opentsdb phaser and q

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -138,15 +138,27 @@ default_uri: /lodash/_
 [lua]
 name: Lua
 parsed_name: lua
-default_uri: /lua
+default_uri: /lua/manual
 [marionette]
 name: Marionette
 parsed_name: marionette
 default_uri: /marionette/api
+[meteor]
+name: Meteor
+parsed_name: meteor
+default_uri: /meteor
+[minitest]
+name: Minitest
+parsed_name: minitest
+default_uri: /minitest
 [markdown]
 name: MarkDown
 parsed_name: markdown
 default_uri: /markdown/inline_html
+[mocha]
+name: Mocha
+parsed_name: mocha
+default_uri: /mocha/index
 [modernizr]
 name: Modernizr
 parsed_name: modernizr
@@ -179,10 +191,18 @@ default_uri: /npm/faq
 name: PHP
 parsed_name: php
 default_uri: /php/classes_and_objects
+[opentsdb]
+name: OpenTSDB
+parsed_name: opentsdb
+default_uri: /opentsdb/index
 [phpunit]
 name: PHPUnit
 parsed_name: phpunit
 default_uri: /phpunit/phpunit_and_selenium
+[phaser]
+name: Phaser
+parsed_name: phaser
+default_uri: /phaser/
 [postgresql]
 name: PostgreSQL
 parsed_name: postgresql
@@ -195,6 +215,10 @@ default_uri: /python2/keyword
 name: Python3
 parsed_name: python3
 default_uri: /python3/abc
+[q]
+name: q
+parsed_name: q
+default_uri: /q
 [rails]
 name: Rails
 parsed_name: rails
