--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -218,7 +218,7 @@ default_uri: /python3/abc
 [q]
 name: q
 parsed_name: q
-default_uri: /q
+default_uri: /q/index
 [rails]
 name: Rails
 parsed_name: rails
@@ -243,6 +243,10 @@ default_uri: /rethinkdb/index_list
 name: Ruby
 parsed_name: ruby
 default_uri: /ruby/class
+[rust]
+name: Rust
+parsed_name: rust
+default_uri: rust/2.2._hello._world!
 [sass]
 name: Sass
 parsed_name: sass
