--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -263,6 +263,10 @@ default_uri: /socketio/client_api
 name: SVG
 parsed_name: svg
 default_uri: /svg/index
+[symfony]
+name: Symfony
+parsed_name: symfony
+default_uri: /symfony/component/console/command/listcommand
 [underscore]
 name: UnderscoreJS
 parsed_name: underscorejs
