--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -271,6 +271,10 @@ default_uri: /symfony/component/console/command/listcommand
 name: UnderscoreJS
 parsed_name: underscorejs
 default_uri: /underscorejs/all
+[vue]
+name: Vue
+parsed_name: vue
+default_uri: /vue/getting_started
 [xpath]
 name: XPath
 parsed_name: xpath
