--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -275,6 +275,10 @@ default_uri: /underscorejs/all
 name: Vue
 parsed_name: vue
 default_uri: /vue/getting_started
+[webpack]
+name: Webpack
+parsed_name: webpack
+default_uri: /webpack/installation
 [xpath]
 name: XPath
 parsed_name: xpath
