--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -287,3 +287,7 @@ default_uri: /xpath/index
 name: Yii
 parsed_name: yii
 default_uri: /yii/quick_start
+[yii1]
+name: Yii1
+parsed_name: Yii1
+default_uri: /yii1
