added phalcon docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -199,6 +199,10 @@ default_uri: /opentsdb/index
 name: PHPUnit
 parsed_name: phpunit
 default_uri: /phpunit/phpunit_and_selenium
+[phalcon]
+name: Phalcon
+parsed_name: phalcon
+default_uri: /phalcon/
 [phaser]
 name: Phaser
 parsed_name: phaser
