added new docsets to the scripts

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -103,6 +103,10 @@ default_uri: /http/200_ok
 name: Haskell
 parsed_name: haskell
 default_uri: /haskell/index
+[iojs]
+name: ioJS
+parsed_name: iojs
+default_uri: /iojs/index
 [jquery]
 name: JQuery
 parsed_name: jquery
@@ -231,6 +235,10 @@ default_uri: /rails/rails
 name: React
 parsed_name: react
 default_uri: /react/thinking_in_react
+[react_native]
+name: React native
+parsed_name: react_native
+default_uri: /react/
 [redis]
 name: Redis
 parsed_name: redis
