added react router,reflux and removed meteor

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -147,10 +147,6 @@ default_uri: /lua/manual
 name: Marionette
 parsed_name: marionette
 default_uri: /marionette/api
-[meteor]
-name: Meteor
-parsed_name: meteor
-default_uri: /meteor
 [markdown]
 name: MarkDown
 parsed_name: markdown
@@ -235,10 +231,18 @@ default_uri: /react/thinking_in_react
 name: React native
 parsed_name: react_native
 default_uri: /react/
+[react_router]
+name: React Router
+parsed_name: react_router
+default_uri: /react/
 [redis]
 name: Redis
 parsed_name: redis
 default_uri: /redis/index
+[reflux]
+name: Reflux
+parsed_name: reflux
+default_uri: /reflux/index
 [requirejs]
 name: RequireJS
 parsed_name: requirejs
