added new docsets to the import scripts

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -23,6 +23,10 @@ default_uri: /backbonejs/backbone.$
 name: Bower
 parsed_name: bower
 default_uri: /bower/creating_packages
+[browserify]
+name: Browserify
+parsed_name: browserify
+default_uri: /browserify/getting_started
 [c]
 name: C
 parsed_name: c
