added jasmine to importer

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -111,6 +111,10 @@ default_uri: /haskell/index
 name: ioJS
 parsed_name: iojs
 default_uri: /iojs/index
+[jasmine]
+name: Jasmine
+parsed_name: jasmine
+default_uri: /jasmine/introduction
 [jquery]
 name: JQuery
 parsed_name: jquery
