added jasmine docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -115,10 +115,10 @@ default_uri: /iojs/index
 name: Jasmine
 parsed_name: jasmine
 default_uri: /jasmine/introduction
-[jquery]
-name: JQuery
-parsed_name: jquery
-default_uri: /jquery/types
+[jest]
+name: Jest
+parsed_name: jest
+default_uri: /jest/getting_started
 [jqueryui]
 name: JQuery UI
 parsed_name: jquery_ui
