added mysql docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -171,6 +171,10 @@ default_uri: /modernizr/index
 name: Moment
 parsed_name: moment
 default_uri: /moment/index
+[mysql]
+name: Mysql
+parsed_name: mysql
+default_uri: /mysql/index
 [mongoosejs]
 name: MongooseJS
 parsed_name: mongoosejs
