enabled source_url field

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -291,6 +291,10 @@ default_uri: /svg/index
 name: Symfony
 parsed_name: symfony
 default_uri: /symfony/component/console/command/listcommand
+[twig]
+name: Twig
+parsed_name: twig
+default_uri: /twig/doc-index
 [underscore]
 name: UnderscoreJS
 parsed_name: underscorejs
