--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -11,3 +11,389 @@ debugMode: True
 name: AngularJS
 parsed_name: angularjs
 default_uri: /angularjs/ng
+active: true
+[apache]
+name: Apache
+parsed_name: apache
+default_uri: /apache/core
+active: true
+[backbone]
+name: BackboneJS
+parsed_name: backbonejs
+default_uri: /backbonejs/backbone.$
+active: true
+[bower]
+name: Bower
+parsed_name: bower
+default_uri: /bower/creating_packages
+active: true
+[browserify]
+name: Browserify
+parsed_name: browserify
+default_uri: /browserify/getting_started
+active: true
+[c]
+name: C
+parsed_name: c
+default_uri: /c/c_keywords
+active: true
+[chai]
+name: Chai
+parsed_name: chai
+default_uri: /chai/api_reference
+active: true
+[clojure]
+name: Clojure
+parsed_name: clojure
+default_uri: /clojure/clojure.core
+active: true
+[coffeescript]
+name: CoffeeScript
+parsed_name: coffeescript
+default_uri: /coffeescript/index
+active: true
+[cordova]
+name: Apache Cordova
+parsed_name: apache_cordova
+default_uri: /apache-cordova/overview
+active: true
+[cpp]
+name: Cpp
+parsed_name: cpp
+default_uri: /cpp/c++_language
+active: true
+[css]
+name: CSS
+parsed_name: css
+default_uri: /css/universal_selectors
+active: true
+[d3]
+name: D3
+parsed_name: d3
+default_uri: /d3/namespaces
+active: true
+[django]
+name: Django
+parsed_name: django
+default_uri: /django/getting_started
+active: true
+[dom]
+name: DOM
+parsed_name: dom
+default_uri: /dom/document
+active: true
+[dom_events]
+name: DOM Events
+parsed_name: dom_events
+default_uri: /dom_events/click
+active: true
+[drupal]
+name: Drupal
+parsed_name: drupal
+default_uri: /drupal
+active: true
+[ember]
+name: EmberJS
+parsed_name: emberjs
+default_uri: /ember/classes/namespace
+active: true
+[express]
+name: Express
+parsed_name: express
+default_uri: /express/express
+active: true
+[git]
+name: Git
+parsed_name: git
+default_uri: /git/git
+active: true
+[go]
+name: Go
+parsed_name: go
+default_uri: /go/go_programming_language/community
+active: true
+[grunt]
+name: Grunt
+parsed_name: grunt
+default_uri: /grunt/grunt
+active: true
+[html]
+name: HTML
+parsed_name: html
+default_uri: /html/html_attribute_reference
+active: true
+[http]
+name: Http
+parsed_name: http
+default_uri: /http/200_ok
+active: true
+[haskell]
+name: Haskell
+parsed_name: haskell
+default_uri: /haskell/index
+active: true
+[iojs]
+name: ioJS
+parsed_name: iojs
+default_uri: /iojs/index
+active: true
+[jasmine]
+name: Jasmine
+parsed_name: jasmine
+default_uri: /jasmine/introduction
+active: true
+[jest]
+name: Jest
+parsed_name: jest
+default_uri: /jest/getting_started
+active: true
+[jqueryui]
+name: JQuery UI
+parsed_name: jquery_ui
+default_uri: /jqueryui/color-animation
+active: true
+[jquerymobile]
+name: JQuery Mobile
+parsed_name: jquery_mobile
+default_uri: /jquerymobile/classes
+active: true
+[javascript]
+name: JavaScript
+parsed_name: javascript
+default_uri: /javascript/statements_and_declarations
+active: true
+[knockout]
+name: KnockOut
+parsed_name: knockout
+default_uri: /knockout/knockout.js
+active: true
+[less]
+name: Less
+parsed_name: less
+default_uri: /less/misc_functions
+active: true
+[laravel]
+name: Laravel
+parsed_name: laravel
+default_uri: /laravel/namespaces
+active: true
+[lodash]
+name: Lo-Dash
+parsed_name: lodash
+default_uri: /lodash/_
+active: true
+[lua]
+name: Lua
+parsed_name: lua
+default_uri: /lua/manual
+active: true
+[marionette]
+name: Marionette
+parsed_name: marionette
+default_uri: /marionette/api
+active: true
+[markdown]
+name: MarkDown
+parsed_name: markdown
+default_uri: /markdown/inline_html
+active: true
+[mocha]
+name: Mocha
+parsed_name: mocha
+default_uri: /mocha/index
+active: true
+[modernizr]
+name: Modernizr
+parsed_name: modernizr
+default_uri: /modernizr/index
+active: true
+[moment]
+name: Moment
+parsed_name: moment
+default_uri: /moment/index
+active: true
+[mysql]
+name: Mysql
+parsed_name: mysql
+default_uri: /mysql/index
+active: true
+[mongoosejs]
+name: MongooseJS
+parsed_name: mongoosejs
+default_uri: /mongoosejs/index
+active: true
+[nginx]
+name: Nginx
+parsed_name: nginx
+default_uri: /nginx/guide/beginner’s_guide
+active: true
+[node]
+name: NodeJS
+parsed_name: node
+default_uri: /nodejs/assert
+active: true
+[nokogiri]
+parsed_name: nokogiri
+name: Nokogiri
+default_uri: /nokogiri/top_level_namespace
+active: true
+[npm]
+name: npm
+parsed_name: npm
+default_uri: /npm/faq
+active: true
+[php]
+name: PHP
+parsed_name: php
+default_uri: /php/classes_and_objects
+active: true
+[opentsdb]
+name: OpenTSDB
+parsed_name: opentsdb
+default_uri: /opentsdb/index
+active: true
+[phpunit]
+name: PHPUnit
+parsed_name: phpunit
+default_uri: /phpunit/phpunit_and_selenium
+active: true
+[phalcon]
+name: Phalcon
+parsed_name: phalcon
+default_uri: /phalcon/
+active: true
+[phaser]
+name: Phaser
+parsed_name: phaser
+default_uri: /phaser/
+active: true
+[postgresql]
+name: PostgreSQL
+parsed_name: postgresql
+default_uri: /postgresql/select
+active: true
+[python2]
+name: Python2
+parsed_name: python2
+default_uri: /python2/keyword
+active: true
+[python]
+name: Python3
+parsed_name: python3
+default_uri: /python3/abc
+active: true
+[q]
+name: q
+parsed_name: q
+default_uri: /q/index
+active: true
+[rails]
+name: Rails
+parsed_name: rails
+default_uri: /rails/rails
+active: true
+[react]
+name: React
+parsed_name: react
+default_uri: /react/thinking_in_react
+active: true
+[react_native]
+name: React native
+parsed_name: react_native
+default_uri: /react/
+active: true
+[react_router]
+name: React Router
+parsed_name: react_router
+default_uri: /react/
+active: true
+[redis]
+name: Redis
+parsed_name: redis
+default_uri: /redis/index
+active: true
+[reflux]
+name: Reflux
+parsed_name: reflux
+default_uri: /reflux/index
+active: true
+[requirejs]
+name: RequireJS
+parsed_name: requirejs
+default_uri: /requirejs/commonjs_notes
+active: true
+[rethinkdb]
+name: RethinkDB
+parsed_name: rethinkdb
+default_uri: /rethinkdb/index_list
+active: true
+[ruby]
+name: Ruby
+parsed_name: ruby
+default_uri: /ruby/class
+active: true
+[rust]
+name: Rust
+parsed_name: rust
+default_uri: rust/2.2._hello._world!
+active: true
+[sass]
+name: Sass
+parsed_name: sass
+default_uri: /sass/list_functions
+active: true
+[sinon]
+name: SinonJS
+parsed_name: sinonjs
+default_uri: /sinonjs/spiapi
+active: true
+[socketio]
+name: SocketIO
+parsed_name: socketio
+default_uri: /socketio/client_api
+active: true
+[svg]
+name: SVG
+parsed_name: svg
+default_uri: /svg/index
+active: true
+[symfony]
+name: Symfony
+parsed_name: symfony
+default_uri: /symfony/component/console/command/listcommand
+active: true
+[twig]
+name: Twig
+parsed_name: twig
+default_uri: /twig/doc-index
+active: true
+[underscore]
+name: UnderscoreJS
+parsed_name: underscorejs
+default_uri: /underscorejs/all
+active: true
+[vue]
+name: Vue
+parsed_name: vue
+default_uri: /vue/getting_started
+active: true
+[webpack]
+name: Webpack
+parsed_name: webpack
+default_uri: /webpack/installation
+active: true
+[xpath]
+name: XPath
+parsed_name: xpath
+default_uri: /xpath/index
+active: true
+[yii]
+name: Yii
+parsed_name: yii
+default_uri: /yii/quick_start
+active: true
+[yii1]
+name: Yii1
+parsed_name: Yii1
+default_uri: /yii1
+active: true
