created new scraper manager

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -11,389 +11,639 @@ debugMode: True
 name: AngularJS
 parsed_name: angularjs
 default_uri: /angularjs/ng
+scraper_name: angular
+zip_url:  
+sort: 1
 active: true
 [apache]
 name: Apache
 parsed_name: apache
 default_uri: /apache/core
+scraper_name: apache
+zip_url:  
+sort: 2
 active: true
 [backbone]
 name: BackboneJS
 parsed_name: backbonejs
 default_uri: /backbonejs/backbone.$
+scraper_name: backbone
+zip_url:  
+sort: 3
 active: true
 [bower]
 name: Bower
 parsed_name: bower
 default_uri: /bower/creating_packages
+scraper_name: bower
+zip_url:  
+sort: 4
 active: true
 [browserify]
 name: Browserify
 parsed_name: browserify
 default_uri: /browserify/getting_started
+scraper_name: browserify
+zip_url:  
+sort: 5
 active: true
 [c]
 name: C
 parsed_name: c
 default_uri: /c/c_keywords
+scraper_name: c
+zip_url: http://upload.cppreference.com/mwiki/images/6/6c/html_book_20141118.tar.gz 
+sort: 6
 active: true
 [chai]
 name: Chai
 parsed_name: chai
 default_uri: /chai/api_reference
+scraper_name: chai
+zip_url:  
+sort: 7
 active: true
 [clojure]
 name: Clojure
 parsed_name: clojure
 default_uri: /clojure/clojure.core
+scraper_name: clojure
+zip_url:  
+sort: 8
 active: true
 [coffeescript]
 name: CoffeeScript
 parsed_name: coffeescript
 default_uri: /coffeescript/index
+scraper_name: coffeescript
+zip_url:  
+sort: 9
 active: true
 [cordova]
 name: Apache Cordova
 parsed_name: apache_cordova
 default_uri: /apache-cordova/overview
+scraper_name: cordova
+zip_url:  
+sort: 11
 active: true
 [cpp]
 name: Cpp
 parsed_name: cpp
 default_uri: /cpp/c++_language
+scraper_name: cpp
+zip_url:  
+sort: 12
 active: true
 [css]
 name: CSS
 parsed_name: css
 default_uri: /css/universal_selectors
+scraper_name: css
+zip_url:  
+sort: 40
 active: true
 [d3]
 name: D3
 parsed_name: d3
 default_uri: /d3/namespaces
+scraper_name: d3
+zip_url:  
+sort: 13
 active: true
 [django]
 name: Django
 parsed_name: django
 default_uri: /django/getting_started
+scraper_name: django
+zip_url: https://docs.djangoproject.com/m/docs/django-docs-1.8-en.zip 
+sort: 14
 active: true
 [dom]
 name: DOM
 parsed_name: dom
 default_uri: /dom/document
+scraper_name: dom
+zip_url:  
+sort: 10
 active: true
 [dom_events]
 name: DOM Events
 parsed_name: dom_events
 default_uri: /dom_events/click
+scraper_name: dom_events
+zip_url:  
+sort: 0
 active: true
 [drupal]
 name: Drupal
 parsed_name: drupal
 default_uri: /drupal
+scraper_name: drupal
+zip_url:  
+sort: 15
 active: true
 [ember]
 name: EmberJS
 parsed_name: emberjs
 default_uri: /ember/classes/namespace
+scraper_name: ember
+zip_url:  
+sort: 16
 active: true
 [express]
 name: Express
 parsed_name: express
 default_uri: /express/express
+scraper_name: express
+zip_url:  
+sort: 17
 active: true
 [git]
 name: Git
 parsed_name: git
 default_uri: /git/git
+scraper_name: git
+zip_url:  
+sort: 18
 active: true
 [go]
 name: Go
 parsed_name: go
 default_uri: /go/go_programming_language/community
+scraper_name: go
+zip_url:  
+sort: 19
 active: true
 [grunt]
 name: Grunt
 parsed_name: grunt
 default_uri: /grunt/grunt
+scraper_name: grunt
+zip_url:  
+sort: 21
 active: true
 [html]
 name: HTML
 parsed_name: html
 default_uri: /html/html_attribute_reference
+scraper_name: html
+zip_url:  
+sort: 30
 active: true
 [http]
 name: Http
 parsed_name: http
 default_uri: /http/200_ok
+scraper_name: http
+zip_url:  
+sort: 22
 active: true
 [haskell]
 name: Haskell
 parsed_name: haskell
 default_uri: /haskell/index
+scraper_name: haskell
+zip_url:  
+sort: 23
 active: true
 [iojs]
 name: ioJS
 parsed_name: iojs
 default_uri: /iojs/index
+scraper_name: iojs
+zip_url:  
+sort: 24
 active: true
 [jasmine]
 name: Jasmine
 parsed_name: jasmine
 default_uri: /jasmine/introduction
-active: true
-[jest]
-name: Jest
-parsed_name: jest
-default_uri: /jest/getting_started
-active: true
-[jqueryui]
-name: JQuery UI
-parsed_name: jquery_ui
-default_uri: /jqueryui/color-animation
-active: true
-[jquerymobile]
-name: JQuery Mobile
-parsed_name: jquery_mobile
-default_uri: /jquerymobile/classes
+scraper_name: jasmine
+zip_url:  
+sort: 25
 active: true
 [javascript]
 name: JavaScript
 parsed_name: javascript
 default_uri: /javascript/statements_and_declarations
+scraper_name: javascript
+zip_url:  
+sort: 20
+active: true
+[java7se]
+name: Java 7 SE
+parsed_name: java7se
+default_uri: /java7se/
+scraper_name: java7se
+zip_url:  
+sort: 26
+active: true
+[jest]
+name: Jest
+parsed_name: jest
+default_uri: /jest/getting_started
+scraper_name: jest
+zip_url:  
+sort: 27
+active: true
+[jquery]
+name: JQuery
+parsed_name: jquery
+default_uri: /jquery/index
+scraper_name: jquery_core
+zip_url:  
+sort: 28
+active: true
+[jqueryui]
+name: JQuery UI
+parsed_name: jquery_ui
+default_uri: /jqueryui/color-animation
+scraper_name: jquery_ui
+zip_url:  
+sort: 29
+active: true
+[jquerymobile]
+name: JQuery Mobile
+parsed_name: jquery_mobile
+default_uri: /jquerymobile/classes
+scraper_name: jquery_mobile
+zip_url:  
+sort: 31
 active: true
 [knockout]
 name: KnockOut
 parsed_name: knockout
 default_uri: /knockout/knockout.js
+scraper_name: knockout
+zip_url:  
+sort: 32
 active: true
 [less]
 name: Less
 parsed_name: less
 default_uri: /less/misc_functions
+scraper_name: less
+zip_url:  
+sort: 33
 active: true
 [laravel]
 name: Laravel
 parsed_name: laravel
 default_uri: /laravel/namespaces
+scraper_name: laravel
+zip_url:  
+sort: 34
 active: true
 [lodash]
 name: Lo-Dash
 parsed_name: lodash
 default_uri: /lodash/_
+scraper_name: lodash
+zip_url:  
+sort: 35
 active: true
 [lua]
 name: Lua
 parsed_name: lua
 default_uri: /lua/manual
+scraper_name: lua
+zip_url:  
+sort: 36
 active: true
 [marionette]
 name: Marionette
 parsed_name: marionette
 default_uri: /marionette/api
+scraper_name: marionette
+zip_url:  
+sort: 37
 active: true
 [markdown]
 name: MarkDown
 parsed_name: markdown
 default_uri: /markdown/inline_html
+scraper_name: markdown
+zip_url:  
+sort: 38
 active: true
 [mocha]
 name: Mocha
 parsed_name: mocha
 default_uri: /mocha/index
+scraper_name: mocha
+zip_url:  
+sort: 39
 active: true
 [modernizr]
 name: Modernizr
 parsed_name: modernizr
 default_uri: /modernizr/index
+scraper_name: modernizr
+zip_url:  
+sort: 41
 active: true
 [moment]
 name: Moment
 parsed_name: moment
 default_uri: /moment/index
+scraper_name: moment
+zip_url:  
+sort: 42
 active: true
 [mysql]
 name: Mysql
 parsed_name: mysql
 default_uri: /mysql/index
+scraper_name: mysql
+zip_url:  
+sort: 43
 active: true
 [mongoosejs]
 name: MongooseJS
 parsed_name: mongoosejs
 default_uri: /mongoosejs/index
+scraper_name: mongoose
+zip_url:  
+sort: 44
 active: true
 [nginx]
 name: Nginx
 parsed_name: nginx
 default_uri: /nginx/guide/beginner’s_guide
+scraper_name: nginx
+zip_url:  
+sort: 45
 active: true
 [node]
 name: NodeJS
 parsed_name: node
 default_uri: /nodejs/assert
+scraper_name: node
+zip_url:  
+sort: 46
 active: true
 [nokogiri]
 parsed_name: nokogiri
 name: Nokogiri
 default_uri: /nokogiri/top_level_namespace
+scraper_name: nokogiri2
+zip_url:  
+sort: 47
 active: true
 [npm]
 name: npm
 parsed_name: npm
 default_uri: /npm/faq
-active: true
-[php]
-name: PHP
-parsed_name: php
-default_uri: /php/classes_and_objects
+scraper_name: npm
+zip_url:  
+sort: 48
 active: true
 [opentsdb]
 name: OpenTSDB
 parsed_name: opentsdb
 default_uri: /opentsdb/index
+scraper_name: opentsdb
+zip_url:  
+sort: 49
+active: true
+[php]
+name: PHP
+parsed_name: php
+default_uri: /php/classes_and_objects
+scraper_name: php2
+zip_url:  
+sort: 51
 active: true
 [phpunit]
 name: PHPUnit
 parsed_name: phpunit
 default_uri: /phpunit/phpunit_and_selenium
+scraper_name: phpunit
+zip_url:  
+sort: 52
 active: true
 [phalcon]
 name: Phalcon
 parsed_name: phalcon
 default_uri: /phalcon/
+scraper_name: phalcon
+zip_url:  
+sort: 53
 active: true
 [phaser]
 name: Phaser
 parsed_name: phaser
 default_uri: /phaser/
+scraper_name: phaser
+zip_url:  
+sort: 54
 active: true
 [postgresql]
 name: PostgreSQL
 parsed_name: postgresql
 default_uri: /postgresql/select
+scraper_name: postgresql
+zip_url:  
+sort: 55
 active: true
 [python2]
 name: Python2
 parsed_name: python2
 default_uri: /python2/keyword
+scraper_name: python2
+zip_url: https://docs.python.org/2.7/archives/python-2.7.8-docs-html.zip
+sort: 56
 active: true
 [python]
 name: Python3
 parsed_name: python3
 default_uri: /python3/abc
+scraper_name: python
+zip_url: https://docs.python.org/3/archives/python-3.5.0-docs-html.zip
+sort: 57
 active: true
 [q]
 name: q
 parsed_name: q
 default_uri: /q/index
+scraper_name: q
+zip_url:  
+sort: 58
 active: true
 [rails]
 name: Rails
 parsed_name: rails
 default_uri: /rails/rails
+scraper_name: rails
+zip_url:  
+sort: 59
 active: true
 [react]
 name: React
 parsed_name: react
 default_uri: /react/thinking_in_react
+scraper_name: react
+zip_url:  
+sort: 61
 active: true
 [react_native]
 name: React native
 parsed_name: react_native
 default_uri: /react/
+scraper_name: react_native
+zip_url:  
+sort: 62
 active: true
 [react_router]
 name: React Router
 parsed_name: react_router
 default_uri: /react/
+scraper_name: react_router
+zip_url:  
+sort: 63
 active: true
 [redis]
 name: Redis
 parsed_name: redis
 default_uri: /redis/index
+scraper_name: redis
+zip_url:  
+sort: 64
 active: true
 [reflux]
 name: Reflux
 parsed_name: reflux
 default_uri: /reflux/index
+scraper_name: reflux
+zip_url:  
+sort: 65
 active: true
 [requirejs]
 name: RequireJS
 parsed_name: requirejs
 default_uri: /requirejs/commonjs_notes
+scraper_name: requirejs
+zip_url:  
+sort: 66
 active: true
 [rethinkdb]
 name: RethinkDB
 parsed_name: rethinkdb
 default_uri: /rethinkdb/index_list
+scraper_name: rethinkdb
+zip_url:  
+sort: 67
 active: true
 [ruby]
 name: Ruby
 parsed_name: ruby
 default_uri: /ruby/class
+scraper_name: ruby
+zip_url:  
+sort: 68
 active: true
 [rust]
 name: Rust
 parsed_name: rust
 default_uri: rust/2.2._hello._world!
+scraper_name: rust
+zip_url:  
+sort: 69
 active: true
 [sass]
 name: Sass
 parsed_name: sass
 default_uri: /sass/list_functions
+scraper_name: sass
+zip_url:  
+sort: 70
 active: true
 [sinon]
 name: SinonJS
 parsed_name: sinonjs
 default_uri: /sinonjs/spiapi
+scraper_name: sinon
+zip_url:  
+sort: 71
 active: true
 [socketio]
 name: SocketIO
 parsed_name: socketio
 default_uri: /socketio/client_api
+scraper_name: socketio
+zip_url:  
+sort: 72
 active: true
 [svg]
 name: SVG
 parsed_name: svg
 default_uri: /svg/index
+scraper_name: svg
+zip_url:  
+sort: 50
 active: true
 [symfony]
 name: Symfony
 parsed_name: symfony
 default_uri: /symfony/component/console/command/listcommand
+scraper_name: symfony
+zip_url:  
+sort: 73
 active: true
 [twig]
 name: Twig
 parsed_name: twig
 default_uri: /twig/doc-index
+scraper_name: twig
+zip_url:  
+sort: 74
 active: true
 [underscore]
 name: UnderscoreJS
 parsed_name: underscorejs
 default_uri: /underscorejs/all
+scraper_name: underscore
+zip_url:  
+sort: 75
 active: true
 [vue]
 name: Vue
 parsed_name: vue
 default_uri: /vue/getting_started
+scraper_name: vue
+zip_url:  
+sort: 76
 active: true
 [webpack]
 name: Webpack
 parsed_name: webpack
 default_uri: /webpack/installation
+scraper_name: webpack
+zip_url:  
+sort: 77
 active: true
 [xpath]
 name: XPath
 parsed_name: xpath
 default_uri: /xpath/index
+scraper_name: xpath
+zip_url:  
+sort: 60
 active: true
 [yii]
 name: Yii
 parsed_name: yii
 default_uri: /yii/quick_start
+scraper_name: yii
+zip_url:  
+sort: 78
 active: true
 [yii1]
 name: Yii1
 parsed_name: Yii1
 default_uri: /yii1
+scraper_name: yii1
+zip_url:  
+sort: 79
 active: true
