added chef docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -63,6 +63,14 @@ scraper_name: chai
 zip_url:  
 sort: 7
 active: true
+[chef]
+name: Chef
+parsed_name: chef
+default_uri: chef/all_about_chef_...
+scraper_name: chef
+zip_url:  
+sort: 80
+active: true
 [clojure]
 name: Clojure
 parsed_name: clojure
