added swift docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -591,6 +591,14 @@ scraper_name: svg
 zip_url:  
 sort: 50
 active: true
+[swift]
+name: Swift
+parsed_name: swift
+default_uri: /swift/index
+scraper_name: swift
+zip_url:  
+sort: 81
+active: true
 [symfony]
 name: Symfony
 parsed_name: symfony
