added swiftreference docset

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -14,6 +14,7 @@ default_uri: /angularjs/ng
 scraper_name: angular
 zip_url:  
 sort: 1
+additional: false
 active: true
 [apache]
 name: Apache
@@ -22,6 +23,7 @@ default_uri: /apache/core
 scraper_name: apache
 zip_url:  
 sort: 2
+additional: false
 active: true
 [backbone]
 name: BackboneJS
@@ -30,6 +32,7 @@ default_uri: /backbonejs/backbone.$
 scraper_name: backbone
 zip_url:  
 sort: 3
+additional: false
 active: true
 [bower]
 name: Bower
@@ -38,6 +41,7 @@ default_uri: /bower/creating_packages
 scraper_name: bower
 zip_url:  
 sort: 4
+additional: false
 active: true
 [browserify]
 name: Browserify
@@ -46,6 +50,7 @@ default_uri: /browserify/getting_started
 scraper_name: browserify
 zip_url:  
 sort: 5
+additional: false
 active: true
 [c]
 name: C
@@ -54,6 +59,7 @@ default_uri: /c/c_keywords
 scraper_name: c
 zip_url: http://upload.cppreference.com/mwiki/images/6/6c/html_book_20141118.tar.gz 
 sort: 6
+additional: false
 active: true
 [chai]
 name: Chai
@@ -62,6 +68,7 @@ default_uri: /chai/api_reference
 scraper_name: chai
 zip_url:  
 sort: 7
+additional: false
 active: true
 [chef]
 name: Chef
@@ -70,6 +77,7 @@ default_uri: chef/all_about_chef_...
 scraper_name: chef
 zip_url:  
 sort: 80
+additional: false
 active: true
 [clojure]
 name: Clojure
@@ -78,6 +86,7 @@ default_uri: /clojure/clojure.core
 scraper_name: clojure
 zip_url:  
 sort: 8
+additional: false
 active: true
 [coffeescript]
 name: CoffeeScript
@@ -86,6 +95,7 @@ default_uri: /coffeescript/index
 scraper_name: coffeescript
 zip_url:  
 sort: 9
+additional: false
 active: true
 [cordova]
 name: Apache Cordova
@@ -94,6 +104,7 @@ default_uri: /apache-cordova/overview
 scraper_name: cordova
 zip_url:  
 sort: 11
+additional: false
 active: true
 [cpp]
 name: Cpp
@@ -102,6 +113,7 @@ default_uri: /cpp/c++_language
 scraper_name: cpp
 zip_url:  
 sort: 12
+additional: false
 active: true
 [css]
 name: CSS
@@ -110,6 +122,7 @@ default_uri: /css/universal_selectors
 scraper_name: css
 zip_url:  
 sort: 40
+additional: false
 active: true
 [d3]
 name: D3
@@ -118,6 +131,7 @@ default_uri: /d3/namespaces
 scraper_name: d3
 zip_url:  
 sort: 13
+additional: false
 active: true
 [django]
 name: Django
@@ -126,6 +140,7 @@ default_uri: /django/getting_started
 scraper_name: django
 zip_url: https://docs.djangoproject.com/m/docs/django-docs-1.8-en.zip 
 sort: 14
+additional: false
 active: true
 [dom]
 name: DOM
@@ -134,6 +149,7 @@ default_uri: /dom/document
 scraper_name: dom
 zip_url:  
 sort: 10
+additional: false
 active: true
 [dom_events]
 name: DOM Events
@@ -142,6 +158,7 @@ default_uri: /dom_events/click
 scraper_name: dom_events
 zip_url:  
 sort: 0
+additional: false
 active: true
 [drupal]
 name: Drupal
@@ -150,6 +167,7 @@ default_uri: /drupal
 scraper_name: drupal
 zip_url:  
 sort: 15
+additional: false
 active: true
 [ember]
 name: EmberJS
@@ -158,6 +176,7 @@ default_uri: /ember/classes/namespace
 scraper_name: ember
 zip_url:  
 sort: 16
+additional: false
 active: true
 [express]
 name: Express
@@ -166,6 +185,7 @@ default_uri: /express/express
 scraper_name: express
 zip_url:  
 sort: 17
+additional: false
 active: true
 [git]
 name: Git
@@ -174,6 +194,7 @@ default_uri: /git/git
 scraper_name: git
 zip_url:  
 sort: 18
+additional: false
 active: true
 [go]
 name: Go
@@ -182,6 +203,7 @@ default_uri: /go/go_programming_language/community
 scraper_name: go
 zip_url:  
 sort: 19
+additional: false
 active: true
 [grunt]
 name: Grunt
@@ -190,6 +212,7 @@ default_uri: /grunt/grunt
 scraper_name: grunt
 zip_url:  
 sort: 21
+additional: false
 active: true
 [html]
 name: HTML
@@ -198,6 +221,7 @@ default_uri: /html/html_attribute_reference
 scraper_name: html
 zip_url:  
 sort: 30
+additional: false
 active: true
 [http]
 name: Http
@@ -206,6 +230,7 @@ default_uri: /http/200_ok
 scraper_name: http
 zip_url:  
 sort: 22
+additional: false
 active: true
 [haskell]
 name: Haskell
@@ -214,6 +239,7 @@ default_uri: /haskell/index
 scraper_name: haskell
 zip_url:  
 sort: 23
+additional: false
 active: true
 [iojs]
 name: ioJS
@@ -222,6 +248,7 @@ default_uri: /iojs/index
 scraper_name: iojs
 zip_url:  
 sort: 24
+additional: false
 active: true
 [jasmine]
 name: Jasmine
@@ -230,6 +257,7 @@ default_uri: /jasmine/introduction
 scraper_name: jasmine
 zip_url:  
 sort: 25
+additional: false
 active: true
 [javascript]
 name: JavaScript
@@ -238,6 +266,7 @@ default_uri: /javascript/statements_and_declarations
 scraper_name: javascript
 zip_url:  
 sort: 20
+additional: false
 active: true
 [java7se]
 name: Java 7 SE
@@ -246,6 +275,7 @@ default_uri: /java7se/
 scraper_name: java7se
 zip_url:  
 sort: 26
+additional: false
 active: true
 [jest]
 name: Jest
@@ -254,6 +284,7 @@ default_uri: /jest/getting_started
 scraper_name: jest
 zip_url:  
 sort: 27
+additional: false
 active: true
 [jquery]
 name: JQuery
@@ -262,6 +293,7 @@ default_uri: /jquery/index
 scraper_name: jquery_core
 zip_url:  
 sort: 28
+additional: false
 active: true
 [jqueryui]
 name: JQuery UI
@@ -270,6 +302,7 @@ default_uri: /jqueryui/color-animation
 scraper_name: jquery_ui
 zip_url:  
 sort: 29
+additional: false
 active: true
 [jquerymobile]
 name: JQuery Mobile
@@ -278,6 +311,7 @@ default_uri: /jquerymobile/classes
 scraper_name: jquery_mobile
 zip_url:  
 sort: 31
+additional: false
 active: true
 [knockout]
 name: KnockOut
@@ -286,6 +320,7 @@ default_uri: /knockout/knockout.js
 scraper_name: knockout
 zip_url:  
 sort: 32
+additional: false
 active: true
 [less]
 name: Less
@@ -294,6 +329,7 @@ default_uri: /less/misc_functions
 scraper_name: less
 zip_url:  
 sort: 33
+additional: false
 active: true
 [laravel]
 name: Laravel
@@ -302,6 +338,7 @@ default_uri: /laravel/namespaces
 scraper_name: laravel
 zip_url:  
 sort: 34
+additional: false
 active: true
 [lodash]
 name: Lo-Dash
@@ -310,6 +347,7 @@ default_uri: /lodash/_
 scraper_name: lodash
 zip_url:  
 sort: 35
+additional: false
 active: true
 [lua]
 name: Lua
@@ -318,6 +356,7 @@ default_uri: /lua/manual
 scraper_name: lua
 zip_url:  
 sort: 36
+additional: false
 active: true
 [marionette]
 name: Marionette
@@ -326,6 +365,7 @@ default_uri: /marionette/api
 scraper_name: marionette
 zip_url:  
 sort: 37
+additional: false
 active: true
 [markdown]
 name: MarkDown
@@ -334,6 +374,7 @@ default_uri: /markdown/inline_html
 scraper_name: markdown
 zip_url:  
 sort: 38
+additional: false
 active: true
 [mocha]
 name: Mocha
@@ -342,6 +383,7 @@ default_uri: /mocha/index
 scraper_name: mocha
 zip_url:  
 sort: 39
+additional: false
 active: true
 [modernizr]
 name: Modernizr
@@ -350,6 +392,7 @@ default_uri: /modernizr/index
 scraper_name: modernizr
 zip_url:  
 sort: 41
+additional: false
 active: true
 [moment]
 name: Moment
@@ -358,6 +401,7 @@ default_uri: /moment/index
 scraper_name: moment
 zip_url:  
 sort: 42
+additional: false
 active: true
 [mysql]
 name: Mysql
@@ -366,6 +410,7 @@ default_uri: /mysql/index
 scraper_name: mysql
 zip_url:  
 sort: 43
+additional: false
 active: true
 [mongoosejs]
 name: MongooseJS
@@ -374,6 +419,7 @@ default_uri: /mongoosejs/index
 scraper_name: mongoose
 zip_url:  
 sort: 44
+additional: false
 active: true
 [nginx]
 name: Nginx
@@ -382,6 +428,7 @@ default_uri: /nginx/guide/beginner’s_guide
 scraper_name: nginx
 zip_url:  
 sort: 45
+additional: false
 active: true
 [node]
 name: NodeJS
@@ -390,6 +437,7 @@ default_uri: /nodejs/assert
 scraper_name: node
 zip_url:  
 sort: 46
+additional: false
 active: true
 [nokogiri]
 parsed_name: nokogiri
@@ -398,6 +446,7 @@ default_uri: /nokogiri/top_level_namespace
 scraper_name: nokogiri2
 zip_url:  
 sort: 47
+additional: false
 active: true
 [npm]
 name: npm
@@ -406,6 +455,7 @@ default_uri: /npm/faq
 scraper_name: npm
 zip_url:  
 sort: 48
+additional: false
 active: true
 [opentsdb]
 name: OpenTSDB
@@ -414,6 +464,7 @@ default_uri: /opentsdb/index
 scraper_name: opentsdb
 zip_url:  
 sort: 49
+additional: false
 active: true
 [php]
 name: PHP
@@ -422,6 +473,7 @@ default_uri: /php/classes_and_objects
 scraper_name: php2
 zip_url:  
 sort: 51
+additional: false
 active: true
 [phpunit]
 name: PHPUnit
@@ -430,6 +482,7 @@ default_uri: /phpunit/phpunit_and_selenium
 scraper_name: phpunit
 zip_url:  
 sort: 52
+additional: false
 active: true
 [phalcon]
 name: Phalcon
@@ -438,6 +491,7 @@ default_uri: /phalcon/
 scraper_name: phalcon
 zip_url:  
 sort: 53
+additional: false
 active: true
 [phaser]
 name: Phaser
@@ -446,6 +500,7 @@ default_uri: /phaser/
 scraper_name: phaser
 zip_url:  
 sort: 54
+additional: false
 active: true
 [postgresql]
 name: PostgreSQL
@@ -454,6 +509,7 @@ default_uri: /postgresql/select
 scraper_name: postgresql
 zip_url:  
 sort: 55
+additional: false
 active: true
 [python2]
 name: Python2
@@ -462,6 +518,7 @@ default_uri: /python2/keyword
 scraper_name: python2
 zip_url: https://docs.python.org/2.7/archives/python-2.7.8-docs-html.zip
 sort: 56
+additional: false
 active: true
 [python]
 name: Python3
@@ -470,6 +527,7 @@ default_uri: /python3/abc
 scraper_name: python
 zip_url: https://docs.python.org/3/archives/python-3.5.0-docs-html.zip
 sort: 57
+additional: false
 active: true
 [q]
 name: q
@@ -478,6 +536,7 @@ default_uri: /q/index
 scraper_name: q
 zip_url:  
 sort: 58
+additional: false
 active: true
 [rails]
 name: Rails
@@ -486,6 +545,7 @@ default_uri: /rails/rails
 scraper_name: rails
 zip_url:  
 sort: 59
+additional: false
 active: true
 [react]
 name: React
@@ -494,6 +554,7 @@ default_uri: /react/thinking_in_react
 scraper_name: react
 zip_url:  
 sort: 61
+additional: false
 active: true
 [react_native]
 name: React native
@@ -502,6 +563,7 @@ default_uri: /react/
 scraper_name: react_native
 zip_url:  
 sort: 62
+additional: false
 active: true
 [react_router]
 name: React Router
@@ -510,6 +572,7 @@ default_uri: /react/
 scraper_name: react_router
 zip_url:  
 sort: 63
+additional: false
 active: true
 [redis]
 name: Redis
@@ -518,6 +581,7 @@ default_uri: /redis/index
 scraper_name: redis
 zip_url:  
 sort: 64
+additional: false
 active: true
 [reflux]
 name: Reflux
@@ -526,6 +590,7 @@ default_uri: /reflux/index
 scraper_name: reflux
 zip_url:  
 sort: 65
+additional: false
 active: true
 [requirejs]
 name: RequireJS
@@ -534,6 +599,7 @@ default_uri: /requirejs/commonjs_notes
 scraper_name: requirejs
 zip_url:  
 sort: 66
+additional: false
 active: true
 [rethinkdb]
 name: RethinkDB
@@ -542,6 +608,7 @@ default_uri: /rethinkdb/index_list
 scraper_name: rethinkdb
 zip_url:  
 sort: 67
+additional: false
 active: true
 [ruby]
 name: Ruby
@@ -550,6 +617,7 @@ default_uri: /ruby/class
 scraper_name: ruby
 zip_url:  
 sort: 68
+additional: false
 active: true
 [rust]
 name: Rust
@@ -558,6 +626,7 @@ default_uri: rust/2.2._hello._world!
 scraper_name: rust
 zip_url:  
 sort: 69
+additional: false
 active: true
 [sass]
 name: Sass
@@ -566,6 +635,7 @@ default_uri: /sass/list_functions
 scraper_name: sass
 zip_url:  
 sort: 70
+additional: false
 active: true
 [sinon]
 name: SinonJS
@@ -574,6 +644,7 @@ default_uri: /sinonjs/spiapi
 scraper_name: sinon
 zip_url:  
 sort: 71
+additional: false
 active: true
 [socketio]
 name: SocketIO
@@ -582,6 +653,7 @@ default_uri: /socketio/client_api
 scraper_name: socketio
 zip_url:  
 sort: 72
+additional: false
 active: true
 [svg]
 name: SVG
@@ -590,6 +662,7 @@ default_uri: /svg/index
 scraper_name: svg
 zip_url:  
 sort: 50
+additional: false
 active: true
 [swift]
 name: Swift
@@ -598,6 +671,7 @@ default_uri: /swift/index
 scraper_name: swift
 zip_url:  
 sort: 81
+additional: false
 active: true
 [symfony]
 name: Symfony
@@ -606,6 +680,7 @@ default_uri: /symfony/component/console/command/listcommand
 scraper_name: symfony
 zip_url:  
 sort: 73
+additional: false
 active: true
 [twig]
 name: Twig
@@ -614,6 +689,7 @@ default_uri: /twig/doc-index
 scraper_name: twig
 zip_url:  
 sort: 74
+additional: false
 active: true
 [underscore]
 name: UnderscoreJS
@@ -622,6 +698,7 @@ default_uri: /underscorejs/all
 scraper_name: underscore
 zip_url:  
 sort: 75
+additional: false
 active: true
 [vue]
 name: Vue
@@ -630,6 +707,7 @@ default_uri: /vue/getting_started
 scraper_name: vue
 zip_url:  
 sort: 76
+additional: false
 active: true
 [webpack]
 name: Webpack
@@ -638,6 +716,7 @@ default_uri: /webpack/installation
 scraper_name: webpack
 zip_url:  
 sort: 77
+additional: false
 active: true
 [xpath]
 name: XPath
@@ -646,6 +725,7 @@ default_uri: /xpath/index
 scraper_name: xpath
 zip_url:  
 sort: 60
+additional: false
 active: true
 [yii]
 name: Yii
@@ -654,6 +734,7 @@ default_uri: /yii/quick_start
 scraper_name: yii
 zip_url:  
 sort: 78
+additional: false
 active: true
 [yii1]
 name: Yii1
@@ -662,4 +743,5 @@ default_uri: /yii1
 scraper_name: yii1
 zip_url:  
 sort: 79
+additional: false
 active: true
