modified content location
the content of the pages have been moved to another table

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -673,6 +673,15 @@ zip_url:
 sort: 81
 additional: false
 active: true
+[swiftreference]
+name: Swift
+parsed_name: swift
+default_uri: /swift/reference/index
+scraper_name: swiftreference
+zip_url:  
+sort: 82
+additional: true
+active: true
 [symfony]
 name: Symfony
 parsed_name: symfony
