ctive only dom for testing

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -150,7 +150,7 @@ scraper_name: true
 zip_url:  
 sort: 10
 additional: false
-active: false
+active: true
 [dom_events]
 name: DOM Events
 parsed_name: dom_events
