config with several active docsets

--- a/lib/docs/db_storage/importer.cfg
+++ b/lib/docs/db_storage/importer.cfg
@@ -15,7 +15,7 @@ scraper_name: angular
 zip_url:  
 sort: 1
 additional: false
-active: false
+active: true
 [apache]
 name: Apache
 parsed_name: apache
@@ -24,7 +24,7 @@ scraper_name: apache
 zip_url:  
 sort: 2
 additional: false
-active: false
+active: true
 [backbone]
 name: BackboneJS
 parsed_name: backbonejs
@@ -33,7 +33,7 @@ scraper_name: backbone
 zip_url:  
 sort: 3
 additional: false
-active: false
+active: true
 [bower]
 name: Bower
 parsed_name: bower
@@ -42,7 +42,7 @@ scraper_name: bower
 zip_url:  
 sort: 4
 additional: false
-active: false
+active: true
 [browserify]
 name: Browserify
 parsed_name: browserify
@@ -51,7 +51,7 @@ scraper_name: browserify
 zip_url:  
 sort: 5
 additional: false
-active: false
+active: true
 [c]
 name: C
 parsed_name: c
@@ -60,7 +60,7 @@ scraper_name: c
 zip_url: http://upload.cppreference.com/mwiki/images/6/6c/html_book_20141118.tar.gz 
 sort: 6
 additional: false
-active: false
+active: true
 [chai]
 name: Chai
 parsed_name: chai
@@ -69,7 +69,7 @@ scraper_name: chai
 zip_url:  
 sort: 7
 additional: false
-active: false
+active: true
 [chef]
 name: Chef
 parsed_name: chef
@@ -87,7 +87,7 @@ scraper_name: clojure
 zip_url:  
 sort: 8
 additional: false
-active: false
+active: true
 [coffeescript]
 name: CoffeeScript
 parsed_name: coffeescript
@@ -159,7 +159,7 @@ scraper_name: dom_events
 zip_url:  
 sort: 0
 additional: false
-active: false
+active: true
 [drupal]
 name: Drupal
 parsed_name: drupal
@@ -168,7 +168,7 @@ scraper_name: drupal
 zip_url:  
 sort: 15
 additional: false
-active: false
+active: true
 [ember]
 name: EmberJS
 parsed_name: emberjs
